--- a/HTML/hw1.html
+++ b/HTML/hw1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" href="favicon.ico" />
-    <title>HTML 시작하가</title>
+    <title>HTML 시작하기</title>
 </head>
 <body>
     <h1>사용자 등록 양식</h1>
